Show maintenance warning

--- a/frontend/translations/en.json
+++ b/frontend/translations/en.json
@@ -860,5 +860,9 @@
                 }
             }
         }
+    },
+    "MaintenanceWarning": {
+        "title": "Website em Manutenção",
+        "subtitle": "Estaremos de volta em breve"
     }
 }
