--- a/frontend/translations/pt.json
+++ b/frontend/translations/pt.json
@@ -394,20 +394,16 @@
         "label": "Selecione uma data",
         "placeholder": "Selecione uma data"
     },
-    "LinePatternSelector": {
-        "destination_label": "destined to",
-        "form": {
-            "pattern_code": {
-                "label": "Select a Destination",
-                "placeholder": "Select a Destination",
-                "nothingFound": "No Results Found"
-            },
-            "line_code": {
-                "label": "Select a Line",
-                "placeholder": "Select a Line",
-                "nothingFound": "No Results Found"
-            }
-        }
+    "LinesExplorerContent": {
+        "destination_label": "com destino a"
+    },
+    "LinesExplorerContentHeader": {
+        "destination_label": "com destino a"
+    },
+    "LinesExplorerContentSelectPattern": {
+        "label": "Procurar linha por número, nome, localização...",
+        "placeholder": "Procurar linha por número, nome, localização...",
+        "no_results": "Nenhum Resultado Encontrado"
     },
     "LinePatternMap": {
         "today": "Today",
