--- a/frontend/translations/pt.json
+++ b/frontend/translations/pt.json
@@ -874,5 +874,8 @@
     "MaintenanceWarning": {
         "title": "Website em Manutenção",
         "subtitle": "Estaremos de volta em breve"
+    },
+    "VehiclesExplorer": {
+        "pannel_title": "Veículos"
     }
 }
