Start with /vehicles

--- a/frontend/translations/pt.json
+++ b/frontend/translations/pt.json
@@ -877,5 +877,8 @@
     },
     "VehiclesExplorer": {
         "pannel_title": "Veículos"
+    },
+    "VehiclesExplorerSummary": {
+        "intro": "O passe navegante municipal Família permite que cada agregado familiar pague no máximo o valor de 2 passes navegante municipal, independentemente do número de elementos do agregado familiar. É válido em todas as empresas de serviço público de transporte regular de passageiros, em todos os 18 municípios da Área Metropolitana de Lisboa."
     }
 }
