Tweaks to OG images

--- a/frontend/translations/pt.json
+++ b/frontend/translations/pt.json
@@ -362,7 +362,7 @@
         "error": "Temporarily unavailable"
     },
     "LinesExplorer": {
-        "pannel_title": "Lines & Schedules"
+        "pannel_title": "Linhas e Horários"
     },
     "LinesExplorerToolbar": {
         "form": {
