--- a/nextjs/translations/en.json
+++ b/nextjs/translations/en.json
@@ -365,7 +365,7 @@
         "page_title": ""
     },
     "LinesPage": {
-        "pannel_title": "Lines & Schedules"
+        "Panel_title": "Lines & Schedules"
     },
     "LineSelector": {
         "form": {
