--- a/nextjs/translations/pt.json
+++ b/nextjs/translations/pt.json
@@ -358,11 +358,11 @@
     "lines": {
         "page_title": ""
     },
-    "Pannel": {
+    "Panel": {
         "error": "Temporarily unavailable"
     },
     "FrontendLines": {
-        "pannel_title": "Linhas e Horários"
+        "Panel_title": "Linhas e Horários"
     },
     "FrontendLinesToolbar": {},
     "FrontendLinesToolbarFilters": {
@@ -881,7 +881,7 @@
         "subtitle": "Estaremos de volta em breve"
     },
     "FrontendVehicles": {
-        "pannel_title": "Veículos"
+        "Panel_title": "Veículos"
     },
     "FrontendVehiclesSummary": {
         "intro": "O passe navegante municipal Família permite que cada agregado familiar pague no máximo o valor de 2 passes navegante municipal, independentemente do número de elementos do agregado familiar. É válido em todas as empresas de serviço público de transporte regular de passageiros, em todos os 18 municípios da Área Metropolitana de Lisboa."
