--- a/nextjs/translations/pt.json
+++ b/nextjs/translations/pt.json
@@ -770,7 +770,7 @@
         },
         "thank_you": "Obrigado pelo contributo!"
     },
-    "FrontendAnalytics": {
+    "AppAnalytics": {
         "title": "Respeitamos a sua Privacidade",
         "text": "Com o objetivo de melhorar a performance, os conteúdos e a segurança deste site, a TML pretende recorrer à utilização de cookies ou tecnologias similares.",
         "privacy_policy": "Consultar Política de Cookies",
