--- a/nextjs/translations/pt.json
+++ b/nextjs/translations/pt.json
@@ -422,7 +422,7 @@
     },
     "FrontendLinesContentPatternPathStopTimetable": {
         "hours": {
-            "label": "Hour"
+            "label": "Hora"
         },
         "minutes": {
             "label": "Min."
