Added error label when error

--- a/nextjs/translations/pt.json
+++ b/nextjs/translations/pt.json
@@ -728,7 +728,8 @@
         }
     },
     "FrontendStopsTimetable": {
-        "no_service": "Sem Serviço"
+        "no_service": "Sem Serviço",
+        "unavailable": "Temporariamente Indisponível"
     },
     "FrontendStopsTimetableHeader": {
         "line": "Linha",
